--- a/BCX_Wallet/library_res/src/main/res/values-en/strings.xml
+++ b/BCX_Wallet/library_res/src/main/res/values-en/strings.xml
@@ -84,4 +84,6 @@
     <string name="share_failed">share failed</string>
     <string name="share_cancel">share canceled</string>
     <string name="price_get_error">fail to get cocos price</string>
+    <string name="web_not_open">Not found</string>
+    <string name="delete_search_title">Sure to delete？</string>
 </resources>
