--- a/BCX_Wallet/library_res/src/main/res/values/strings.xml
+++ b/BCX_Wallet/library_res/src/main/res/values/strings.xml
@@ -86,4 +86,6 @@
     <string name="price_get_error">获取cocos价格失败</string>
     <string name="web_not_open">网页无法打开</string>
     <string name="delete_search_title">确定要删除该条历史记录？</string>
+    <string name="history_title">浏览历史记录</string>
+    <string name="clear_history">清除全部历史记录</string>
 </resources>
