--- a/BCX_Wallet/library_res/src/main/res/values/strings.xml
+++ b/BCX_Wallet/library_res/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="TOTAL_ASSET">fonts/TOTAL_ASSET.ttf</string>
     <string name="FUTURAMEDIUMBT">fonts/FUTURAMEDIUMBT.ttf</string>
     <string name="CENTURY_GOTHIC_BOLD">fonts/CENTURY_GOTHIC_BOLD.ttf</string>
-    <string name="module_login_password_hint" tools:ignore="MissingTranslation">12位以上，包含数字、大小写字母和!@#$%^&amp;*.符号</string>
+    <string name="module_login_password_hint" tools:ignore="MissingTranslation">请输入密码</string>
     <string name="copy_success">复制成功</string>
     <string name="copy">复制</string>
     <string name="title_warning_text" tools:ignore="MissingTranslation">注意</string>
@@ -89,4 +89,6 @@
     <string name="history_title">浏览历史记录</string>
     <string name="clear_history">清除全部历史记录</string>
     <string name="module_login_password_illegal" tools:ignore="MissingTranslation">密码设置不符合规则</string>
+    <string name="register_pwd_title">密码要求：</string>
+    <string name="module_login_password_rule">12位以上，包含数字、大小写字母和!@#$%^&amp;*.特殊符号</string>
 </resources>
