--- a/BCX_Wallet/library_base/src/main/res/values-en/strings.xml
+++ b/BCX_Wallet/library_base/src/main/res/values-en/strings.xml
@@ -27,7 +27,7 @@
     <string name="language_en">English</string>
     <string name="net_work_failed">Network busy,  please check your network connection!</string>
     <string name="title_verify_password_text">Verify Key</string>
-    <string name="verify_password_hint">Account key/temporary key</string>
+    <string name="verify_password_hint">Account password/temporary password</string>
     <string name="web_load_failed">The page was taken away by aliens!</string>
     <string name="web_reload">Refresh</string>
     <string name="loading">Loading</string>
